# SystemSoftwareLW1

spoLW1/: CMakeLists.txt
spoLW1/headers/: operations_ext.h  partition.h  user_interface.h
spoLW1/sources/: main.c  operations_ext.c  partition.c  user_interface.c
